ggplot2 1.0.1.9000
----------------------------------------------------------------

* `lims()` makes it easy to set the limits of any axis (#1138).

* `geom_point()` changes the default shape from 16 to 19 - this has a
  better display on the default linux graphics device. (It's very slightly
  smaller than the old point, but it should affect any graphics significantly)

* `theme_minimal()` got slightly more minimal by removing the axis ticks:
  labels now line up beneath the grid lines (@tomschloss, #1084)

* `ggsave()` has been simplified a little to make it easier to maintain.
  It no longer checks that you're printing a ggplot2 object (so now also
  works with any grid grob) (#970), and always requires a filename.
  Parameter `device` now supports character argument to specify which supported
  device to use ('pdf', 'png', 'jpeg', etc.), for when it cannot be correctly
  inferred from the file extension (for example when a temporary filename is
  supplied server side in shiny apps) (@sebkopf, #939)

* `facet_wrap()` more carefully checks its `nrow` and `ncol` arguments
  to ensure that they're specified correctly (@richierocks, #962)

* Improved the calculation of segments needed to draw the curve representing
  a line when plotted in polar coordinates. In some cases, the last segment
  of a multi-segment line was not drawn (@BrianDiggs, #952)

* All datasets have class `tbl_df` so if you also use dplyr, you won't
  accidentally print all the data. `economics` has been brought up to date to
  2015-04-01.

* All instances of partial matched dollar expressions were removed (@jimhester,
  #1134)

* `geom_text()` gains `nudge_x` and `nudge_y` arguments to offset labels from
  the x & y position (#1120). `check_overlap = TRUE` provides a simple
  resolution to label overplotting (#1039). `hjust` and `vjust` can now
  be character vectors: "left", "center", "right", "bottom", "middle", "top".
  New options include "inward" and "outward" which align text towards and